# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Mar 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild, -emacs-vcs-24.0.9999-r2.ebuild:
  Sync from portage tree. Remove experimental ebuild linking to Xaw3dxft.

  11 Mar 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.3.9999.ebuild:
  Sync from portage tree.

*emacs-vcs-24.0.9999-r2 (04 Mar 2011)

  04 Mar 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-vcs-24.0.9999-r2.ebuild:
  Try linking against Xaw3dxft for utf-8 font support in Xaw3d widgets.

*emacs-vcs-23.3.9999 (01 Mar 2011)

  01 Mar 2011; Ulrich Mueller <ulm@gentoo.org> -emacs-vcs-23.2.9999-r1.ebuild,
  +emacs-vcs-23.3.9999.ebuild, emacs-vcs-24.0.9999-r1.ebuild, metadata.xml:
  Bump emacs-23 live ebuild to reflect upstream change of version number.
  The sound USE flag is global now.

  19 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Revert change of 09 Feb 2011. Add "nosmart" initial URI.

  09 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Add REQUIRED_USE for toolkits.

  08 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Test for old bzr checkout.

  06 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-23.2.9999-r1.ebuild,
  emacs-vcs-24.0.9999-r1.ebuild:
  Update to reflect changed variable name in eclass.

  06 Feb 2011; Ulrich Mueller <ulm@gentoo.org> -emacs-vcs-23.2.9999-r20.ebuild,
  -emacs-vcs-24.0.9999-r20.ebuild:
  Remove git based ebuilds again, because we have a working solution with bzr.
  The removed ebuilds can be found in revision 1595 of the emacs overlay.

  05 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-vcs-24.0.9999-r1.ebuild:
  Add a workaround for faster initial download; this clones the branch from a