@@ -2,13 +2,13 @@
 Hash: SHA1
 
 EBUILD emacs-vcs-23.3.9999.ebuild 10439 RMD160 97bc213e09f3d3ab36bb2b75f0a87a95db835976 SHA1 9f99a71de87e7da5be80207593ac6fbd79581f30 SHA256 c11a8e1807c04fd48de8bd20b77d682e708a29a8e3cee7af8657ad8223381c04
-EBUILD emacs-vcs-24.0.9999-r1.ebuild 10524 RMD160 7d614f0cfcf4a93f74fd0e666c6c5d7a8d62c751 SHA1 1b7871039ad22b4492be3373e6b53bbb21a97d0f SHA256 d0bd27b50cb5e89c8deff8546ee9ed03d30514e81e1bf0cf314b42e45a60c979
-MISC ChangeLog 3037 RMD160 df670e4421affad28c389b1f8c73188898b35c20 SHA1 c350388f640fc8f89990b35313dcdcfce35f3a4e SHA256 7bab5a0ac1caacc4c2465a00058c01e4c19a7d771a010f9c7a1197d8584a6df1
-MISC metadata.xml 1801 RMD160 606c780a3e86f485699157f14a35ca0e5da1d3c2 SHA1 05839ee25c6f6389e8eb80d783df895d59600a90 SHA256 bdc233a1795f52900dbe4d0a39c0e56d4eb5ba1c4842b9c46bae47f7052d5d74
+EBUILD emacs-vcs-24.0.9999-r1.ebuild 10955 RMD160 ee2ea3a17f24183c248b3e9d80a80590dea2799a SHA1 daad39daf70927e47dde2a91e4a74056ac9a19d8 SHA256 5d4ea2ac3280b3a6058396f8e500e94990bad89025fd5020d6b8d9113d8dd150
+MISC ChangeLog 3158 RMD160 31a95925f6b63dffb285332d225736f1f717f1a6 SHA1 bf0d53a131faf2fac479c7f48920f2a17a858eda SHA256 26ee273a6c9972ab3dd29c45636170284ac8e3dd1132700cf1561d90b81354d1
+MISC metadata.xml 2106 RMD160 be033c20ddf8d50f045e59552c1cccd3ce829149 SHA1 7e92f2fc679fade0f4b3a4c3d587a6ec8757437d SHA256 ae9bc43d98770006a0792f92b173911e1357135f82f33156f121206f51948e65
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2EeaUACgkQOeoy/oIi7uxrYgCeJeDd/ZPTpJ9aIGl+DqNpuSqW
-JFAAoMyd1p0VE+dWIqyKh70sGCtY2lFL
-=kD9t
+iEYEARECAAYFAk4gfw0ACgkQOeoy/oIi7uwkMACggkuY32lkd9Ihf9YdP28Fw2uR
+CCwAoLJthSL7IGKMPQR1ZSYVMl7NbL6s
+=zvy2
 -----END PGP SIGNATURE-----
