@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/emacs-vcs-24.0.9999-r1.ebuild,v 1.9 2011/03/19 09:34:59 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/emacs-vcs-24.0.9999-r1.ebuild,v 1.10 2011/07/01 18:39:13 ulm Exp $
 
 EAPI=4
 
@@ -30,7 +30,7 @@ HOMEPAGE="http://www.gnu.org/software/emacs/"
 LICENSE="GPL-3 FDL-1.3 BSD as-is MIT W3C unicode"
 SLOT="24"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
-IUSE="alsa dbus gconf gif gnutls gpm gtk gzip-el hesiod imagemagick jpeg kerberos libxml2 m17n-lib motif png selinux sound source svg tiff toolkit-scroll-bars X Xaw3d xft +xpm"
+IUSE="alsa dbus gconf gif gnutls gpm gsettings gtk gtk3 gzip-el hesiod imagemagick jpeg kerberos libxml2 m17n-lib motif png selinux sound source svg tiff toolkit-scroll-bars wide-int X Xaw3d xft +xpm"
 RESTRICT="strip"
 
 RDEPEND="sys-libs/ncurses
@@ -47,7 +47,8 @@ RDEPEND="sys-libs/ncurses
 		x11-libs/libXmu
 		x11-libs/libXt
 		x11-misc/xbitmaps
-		gconf? ( >=gnome-base/gconf-2.26.2 )
+		gsettings? ( >=dev-libs/glib-2.28.6 )
+		!gsettings? ( gconf? ( >=gnome-base/gconf-2.26.2 ) )
 		libxml2? ( >=dev-libs/libxml2-2.2.0 )
 		gif? ( media-libs/giflib )
 		jpeg? ( virtual/jpeg )
@@ -65,7 +66,10 @@ RDEPEND="sys-libs/ncurses
 				>=dev-libs/m17n-lib-1.5.1
 			)
 		)
-		gtk? ( x11-libs/gtk+:2 )
+		gtk? (
+			gtk3? ( x11-libs/gtk+:3 )
+			!gtk3? ( x11-libs/gtk+:2 )
+		)
 		!gtk? (
 			Xaw3d? ( x11-libs/Xaw3d )
 			!Xaw3d? ( motif? ( >=x11-libs/openmotif-2.3:0 ) )
@@ -147,28 +151,41 @@ src_configure() {
 
 	if use X; then
 		myconf="${myconf} --with-x"
-		myconf="${myconf} $(use_with gconf) $(use_with libxml2 xml2)"
+		myconf="${myconf} $(use_with libxml2 xml2)"
 		myconf="${myconf} $(use_with toolkit-scroll-bars)"
+		myconf="${myconf} $(use_with wide-int)"
 		myconf="${myconf} $(use_with gif) $(use_with jpeg)"
 		myconf="${myconf} $(use_with png) $(use_with svg rsvg)"
 		myconf="${myconf} $(use_with tiff) $(use_with xpm)"
-		myconf="${myconf} $(use_with imagemagick) $(use_with xft)"
+		myconf="${myconf} $(use_with imagemagick)"
+
+		if use gsettings; then
+			myconf="${myconf} --with-gsettings --without-gconf"
+			use gconf && ewarn \
+				"USE flag \"gconf\" has no effect if \"gsettings\" is also set."
+		else
+			myconf="${myconf} --without-gsettings $(use_with gconf)"
+		fi
 
 		if use xft; then
+			myconf="${myconf} --with-xft"
 			myconf="${myconf} $(use_with m17n-lib libotf)"
 			myconf="${myconf} $(use_with m17n-lib m17n-flt)"
 		else
+			myconf="${myconf} --without-xft"
 			myconf="${myconf} --without-libotf --without-m17n-flt"
 			use m17n-lib && ewarn \
-				"USE flag \"m17n-lib\" has no effect because xft is not set."
+				"USE flag \"m17n-lib\" has no effect if \"xft\" is not set."
 		fi
 
-		# GTK+ is the default toolkit if USE=gtk is chosen with other
-		# possibilities. Emacs upstream thinks this should be standard
-		# policy on all distributions
 		if use gtk; then
-			einfo "Configuring to build with GIMP Toolkit (GTK+)"
-			myconf="${myconf} --with-x-toolkit=gtk"
+			if use gtk3; then
+				einfo "Configuring to build with GIMP Toolkit (GTK+ 3)"
+				myconf="${myconf} --with-x-toolkit=gtk3"
+			else
+				einfo "Configuring to build with GIMP Toolkit (GTK+ 2)"
+				myconf="${myconf} --with-x-toolkit=gtk"
+			fi
 		elif use Xaw3d; then
 			einfo "Configuring to build with Xaw3d (Athena/Lucid) toolkit"
 			myconf="${myconf} --with-x-toolkit=athena"
